Fixing code smells highlighted by sonarcloud (#1817)
* fixed majority of code smells, pushing to re-run on branch

* cleaned up checkstyle issues, left 2 TODOs to fix

* confirmed logic change in ccdservice, fixed error in updaterectangetest - needs further updating to be a useful test

* removed accidental codeblock indent

---------

Co-authored-by: yogesh-hullatti <53007108+yogesh-hullatti@users.noreply.github.com>